# PhaseMesh

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
bench/: __init__.py  __main__.py  ablations.py  common.py  compare.py  frontier_compare.py  run_all.py  run_comparison.sh  test_adaptive.py  test_context.py  test_correction.py  test_memory.py  test_stability.py  train_math.py
benchmark/: __init__.py
docs/: CREATE_YOUR_OWN.md  NORTH_STAR.md  PUBLISHING.md
examples/: 01_basic_injection.py  02_adaptive_think.py  03_verifier_feedback.py  04_custom_backend.py  distill_prompts.txt  phase_lm_seed.txt  qwen_coding_reasoning_augments_beast.jsonl  qwen_coding_reasoning_eval_beast.jsonl  qwen_coding_reasoning_prompts.txt  qwen_coding_reasoning_prompts_beast.txt  qwen_coding_reasoning_prompts_v2.txt
phase_mesh/: __init__.py  agent_loop.py  chat_lm.py  cli.py  config.py  consolidation.py  distill.py  encoding.py  encoding_structured.py  field.py  lab_demo.py  language_model.py  learnable_core.py  llm_shell.py  memory.py  model.py  phase_accio.py  phase_advantage.py  phase_advantage_docs.py  phase_binding_hard.py  probes.py  registry.py  runtime.py  runtime_types.py  service.py  trainer.py  verifier.py  viz.py  weight_pour.py  weight_reader.py
phase_ssm/: __init__.py  bench.py  chat.py  data.py  decodebench.py  effbench.py  generate.py  memory.py  model.py  mqar_sweep.py  progress.py  recurrent.py  smoke.py  tasks.py  train.py  trainbench.py  transformer.py  triton_scan.py
results/: decode_mixed_bench.md  effbench_long_ctx.md  final_scorecard.md  (+2 more)
(+39 files in other folders)
