[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase-mesh"
version = "0.1.0"
description = "Compact phase-field cognitive mesh with flat synthetic context scaling and adaptive verifier-guided resonance."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "jax>=0.4.14",
  "fastapi>=0.104",
  "httpx2>=0.28",
  "uvicorn>=0.24",
  "pydantic>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
bench = [
  "transformers>=4.45",
  "accelerate>=1.0",
  "bitsandbytes>=0.45; platform_system == 'Linux'",
  "torch>=2.4",
  "datasets>=2.18",
  "psutil>=5.9",
]
frontier = [
  "transformers>=4.45",
  "accelerate>=1.0",
  "bitsandbytes>=0.45; platform_system == 'Linux'",
  "torch>=2.4",
  "datasets>=2.18",
  "psutil>=5.9",
]

[project.scripts]
phase-mesh = "phase_mesh.cli:main"
phase_mesh = "phase_mesh.cli:main"

[tool.setuptools.packages.find]
include = ["phase_mesh*", "bench*", "benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
